--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input type="text" id="username" placeholder="请输入11位账号" maxlength="11" required>
             <input type="password" id="password" placeholder="请输入8位密码" maxlength="8" required>
             <!-- Turnstile 验证 -->
-            <div class="cf-turnstile" data-sitekey="你的站点密钥"></div>
+            <div class="cf-turnstile" data-sitekey="0x4AAAAAAA32zoMOEkys7Hdz"></div>
             <button type="submit">登录</button>
         </form>
     </div>
